@@ -12,8 +12,10 @@ LIBCXXW_NAMESPACE_START
 
 gridfactoryObj::implObj::implObj(dim_t row, dim_t col,
 				 const ref<grid_map_infoObj> &grid_map,
+				 const container_impl &parent_container,
 				 bool replacing)
-	: new_grid_element{row, col, grid_map}, replacing{replacing}
+	: new_grid_element{row, col, parent_container, grid_map},
+	  replacing{replacing}
 {
 }
 
